add_subdirectory(CameraControl)
add_subdirectory(PlaneGrid)
add_subdirectory(FirstCube)
add_subdirectory(FirstTextureCube)
add_subdirectory(SpiralCube)
add_subdirectory(SpiralCubeScene)
add_subdirectory(RTTColor)
add_subdirectory(RTTDepth)
add_subdirectory(RTTColorDepth)
add_subdirectory(SpiralSphereScene)
add_subdirectory(PlaneSphere)
add_subdirectory(FastTerrainTBN)
